--- a/NLPTut.ipynb
+++ b/NLPTut.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO3mJmMxQR1CF2uFPc7oPHh",
+      "authorship_tag": "ABX9TyNLIBJ+TkdhOfpq60QgUp/x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,113 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "MNBlX1z8XHNf"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import nltk"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nltk.download('stopwords')\n",
+        "from nltk.corpus import stopwords"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zdrKaxzXXZ-r",
+        "outputId": "9783183f-3c03-42c6-b821-0d2cbf209330"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
+            "[nltk_data]   Package stopwords is already up-to-date!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "en_stop=stopwords.words(\"english\")"
+      ],
+      "metadata": {
+        "id": "FE3Am7eBXijB"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sentence='It was  too fast to go to the shop and did not want her to walk'"
+      ],
+      "metadata": {
+        "id": "FvywydasXw52"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s=' '.join([word for word in sentence.split() if word not in en_stop])"
+      ],
+      "metadata": {
+        "id": "7nZkVRraX8s-"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "IEUOQh0rYZg7",
+        "outputId": "5091834f-9822-470e-d7c7-57bb61bd77a7"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'It fast go shop want walk'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "FTlGqQVNYdvm"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
