--- a/NLPTut.ipynb
+++ b/NLPTut.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNLIBJ+TkdhOfpq60QgUp/x",
+      "authorship_tag": "ABX9TyPLofBuPNGHqWt1luLfLqhA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "MNBlX1z8XHNf"
       },
@@ -50,7 +50,7 @@
         "id": "zdrKaxzXXZ-r",
         "outputId": "9783183f-3c03-42c6-b821-0d2cbf209330"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -70,7 +70,7 @@
       "metadata": {
         "id": "FE3Am7eBXijB"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -81,7 +81,7 @@
       "metadata": {
         "id": "FvywydasXw52"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -92,7 +92,7 @@
       "metadata": {
         "id": "7nZkVRraX8s-"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -108,7 +108,7 @@
         "id": "IEUOQh0rYZg7",
         "outputId": "5091834f-9822-470e-d7c7-57bb61bd77a7"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -128,10 +128,54 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "import re"
       ],
       "metadata": {
         "id": "FTlGqQVNYdvm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "r=['the match in the sara','the match is find there','sara finding the match problem','matching the matching the matching the matching sara','Only one ','superone']\n",
+        "s=[]\n",
+        "patter='sara'\n",
+        "for i in r:\n",
+        "  if(re.search(patter,i)):\n",
+        "    s.append(i)\n",
+        "\n",
+        "s"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "midwPK8KeaJ8",
+        "outputId": "01686957-766d-41f8-e3dc-77887248a548"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['the match in the sara',\n",
+              " 'sara finding the match problem',\n",
+              " 'matching the matching the matching the matching sara']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "wIrfIdBRe2wM"
       },
       "execution_count": null,
       "outputs": []
